--- a/index.html
+++ b/index.html
@@ -111,16 +111,18 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
-      <a href="/">
-        <img
-          src="assets/logo-light.svg"
-          alt="Skilled Home"
-          width="111"
-          height="28"
-        />
-      </a>
-      <a href="" class="button purple">Get Started</a>
+        <footer class="footer">
+      <div class="wrapper">
+        <a href="/">
+          <img
+            src="assets/logo-light.svg"
+            alt="Skilled Home"
+            width="111"
+            height="28"
+          />
+        </a>
+        <a href="" class="button purple">Get Started</a>
+      </div>
     </footer>
   </body>
 </html>
